--- a/src/sass/blocks/_reasonswe.sass
+++ b/src/sass/blocks/_reasonswe.sass
@@ -24,6 +24,10 @@
                 display: flex
             div
                 color: #ffffff
+            a
+                color: #ffffff
+                &:hover
+                    text-decoration: none
         svg
             display: block
             margin: 0 auto
@@ -49,8 +53,15 @@
         font-weight: 500
         color: #ffffff
         display: none
-
-
-
+    &__block
+        margin-top: 195px
+        display: flex
+        justify-content: space-between
+        button
+            margin-top: 40px
+        &-info
+            margin-left: 80px
+        &-title
+            margin-bottom: 24px
 
 
