--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,9 +10,15 @@
 @import "blocks/button"
 @import "blocks/reasonswe"
 @import "blocks/title"
+@import "blocks/textBlock"
+@import "blocks/aboutus"
+@import "blocks/vectors"
+@import "blocks/companies"
+@import "blocks/subscribe"
 @import "base/media"
 
 .container
     width: 1170px
     margin: 0 auto
-
+.body
+    position: relative
